# Softgen

./: CMakeLists.txt  Game-Engine-Two.vcxproj  Game-Engine-Two.vcxproj.filters  README.md  Render-Engine.sln  main.cpp
Inc/GLAD/: glad.h
Inc/src/: glad.c
Lib/: glfw3.lib
Src/: main.cpp
Src/Helpers/: errorFunc.h  shaderFunc.h
Src/Shaders/: D_frag.glsl  D_vert.glsl
assimp/code/Common/: Importer.cpp
core/: Render.cpp  Render.h
core/camera/: SceneCamera.cpp  SceneCamera.h
core/object/: Object.h
core/object/mesh/: Mesh.h
core/object/types/: SceneObject.cpp  SceneObject.h
core/object/utility/: Transform.cpp  Transform.h  stb_image.cpp
core/scene/: Scene.cpp  Scene.h
models/: OPENGL.dae
shader/: ShaderParser.cpp  ShaderParser.h
shader/sources/: fragment.shader  vertex.shader
